possible fix for squished header navigation

--- a/app/stylesheets/_header.css.sass
+++ b/app/stylesheets/_header.css.sass
@@ -51,6 +51,7 @@
         padding-top: 12px
         float: left
         margin-right: 16px
+        display: block
       li.my-activity 
         position: relative
         padding-right: 9px
